<resources>
    <string name="app_name">Lista de operaciones</string>
    <string name="Titulo">Titulo</string>
    <string name="close">Cerrar</string>
    <string name="calculate">Calcular</string>
    <string name="value_sides">Valor de los lados</string>
    <string name="base_altura">Indica la base o altura</string>
    <string name="indica_base">Indica la base</string>
    <string name="indica_altura">Indica la altura</string>
    <string name="indica_radio">Indica el radio</string>
    <string name="area_circulo">El área de la circunferencia es:</string>
    <string name="area_rectangulo">El área del rectangulo es:</string>
    <string name="area_triangulo">El área del triangulo es:</string>
    <string name="area_cuadrado">El área del cuadrado es:</string>
    <string name="file_required">Campo requerido</string>
    <string name="volumen_esfera">Radio de la esfera</string>
    <string name="volumen_cubo">Cantidad de aristas</string>
    <string name="volumen_esfera_parameter">"El volumen de la esfera es: "</string>
    <string name="volumen_cubo_parameter">"El volumen de un cubo es: "</string>
    <string name="volumen_cono_parameter">"El volumen del cono es: "</string>
    <string name="volumen_cilindro_parameter">"El volumen del cilindro es: "</string>
    <string name="no">No.</string>
    <string name="operacion">Operación</string>
    <string name="datos">Datos</string>
    <string name="resultado">Resultado</string>
</resources>
